--- a/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/05-1-break.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/05-1-break.mdx
@@ -5,6 +5,27 @@ sidebar:
 ---
 import { YouTube } from 'astro-embed';
 
+import MySwiper from '../../../../../../components/react/myswiper.jsx'
+
+import breakStatementSlide01 from './images/control-flow-statements-in-depth/control-flow-break-01.png';
+import breakStatementSlide02 from './images/control-flow-statements-in-depth/control-flow-break-02.png';
+import breakStatementSlide03 from './images/control-flow-statements-in-depth/control-flow-break-03.png';
+import breakStatementSlide04 from './images/control-flow-statements-in-depth/control-flow-break-04.png';
+import breakStatementSlide05 from './images/control-flow-statements-in-depth/control-flow-break-05.png';
+import breakStatementSlide06 from './images/control-flow-statements-in-depth/control-flow-break-06.png';
+import breakStatementSlide07 from './images/control-flow-statements-in-depth/control-flow-break-07.png';
+import breakStatementSlide08 from './images/control-flow-statements-in-depth/control-flow-break-08.png';
+
+import infiniteLoopSlide01 from './images/control-flow-statements-in-depth/control-flow-infinite-loop-01.png';
+import infiniteLoopSlide02 from './images/control-flow-statements-in-depth/control-flow-infinite-loop-02.png';
+import infiniteLoopSlide03 from './images/control-flow-statements-in-depth/control-flow-infinite-loop-03.png';
+import infiniteLoopSlide04 from './images/control-flow-statements-in-depth/control-flow-infinite-loop-04.png';
+import infiniteLoopSlide05 from './images/control-flow-statements-in-depth/control-flow-infinite-loop-05.png';
+import infiniteLoopSlide06 from './images/control-flow-statements-in-depth/control-flow-infinite-loop-06.png';
+import infiniteLoopSlide07 from './images/control-flow-statements-in-depth/control-flow-infinite-loop-07.png';
+import infiniteLoopSlide08 from './images/control-flow-statements-in-depth/control-flow-infinite-loop-08.png';
+import infiniteLoopSlide09 from './images/control-flow-statements-in-depth/control-flow-infinite-loop-09.png';
+
 The break statement is used to jump **out** of the current loop, in effect terminating the loop early. This is useful for ending the current loop, skipping all future cycles.
 
 <a id="FigureBreak"></a>
@@ -63,7 +84,92 @@ while ( !QuitRequested())
 
 The following images show how this works.
 
-**TODO add slider**
+<MySwiper client:only height="" images={sliderImagesBreakStatement}></MySwiper>
+
+
+export const sliderImagesBreakStatement = [
+  {
+    src: breakStatementSlide01.src,
+    altText: "Lines 1-3 use the SplashKit SDK to create a new window",
+    tipStart: 1,
+    tips: [
+      "Lines 1-3 use the SplashKit SDK to create a new window with dimensions 400 x 400 px, and set its background color to white",
+      "The program counter is increased from line 3 to line 4"
+    ]
+  },
+  {
+    src: breakStatementSlide02.src,
+    altText: "The while loop condition is tested (let's assume it's true) so processing proceeds into the body of the loop",
+    tipStart: 2,
+    tips: [
+      "The while loop begins by testing the condition between the braces",
+      "The condition uses the SDK to check if the user asked for the program to quit (for example, the user might click the 'close window' button)",
+      "Let's assume the user has not intervened, and so this evaluates to true",
+      "The program counter increases to execute the body of the while loop" 
+    ]
+  },
+  {
+    src: breakStatementSlide03.src,
+    altText: "Lines 6-8 draws a circle with a random color, position and radius in the window, then listens for events",
+    tipStart: 3,
+    tips: [
+      "Line 6 draws a circle with a random color, position and radius in the window",
+      "Line 7 refreshes the screen to show the circle",
+      "Line 8 uses the SplashKit SDK event handler to listen for (user) events",
+      "The program counter increments to line 9"
+    ]
+  },
+  {
+    src: breakStatementSlide04.src,
+    altText: "Let's assume the user hasn't pressed the 'Escape' key, and so the 'if' condition is false. Processing moves back to the start of the while loop.",
+    tipStart: 4,
+    tips: [
+      "Next, the if statement condition is checked",
+      "If the user has pressed the 'Escape' key, the condition will evaluate to true, and the body of the if statement will be processed",
+      "Let's assume the user hasn't pressed the 'Escape' key this time around",
+      "The counter increments from lines 10 to 12 and back up to the start of the while loop at line 4"
+    ]
+  },
+  {
+    src: breakStatementSlide05.src,
+    altText: "The while loop condition is tested (let's assume it's true) so processing proceeds into the body of the loop",
+    tipStart: 5,
+    tips: [
+      "The while loop condition is tested once more",
+      "Again let's assume that the user hasn't asked for the program to quit",
+      "The program counter increments to execute the body of the while loop again"
+    ]
+  },
+  {
+    src: breakStatementSlide06.src,
+    altText: "Lines 6-8 draw another random circle to the window, and listen for user events",
+    tipStart: 6,
+    tips: [
+      "Lines 6-8 draw another random circle to the window, and listen for user events",
+      "The program counter increments to line 9"
+    ]
+  },
+  {
+    src: breakStatementSlide07.src,
+    altText: "This time the user presses the 'Escape' key and execution moves.",
+    tipStart: 7,
+    tips: [
+      "The if statement condition is checked once more",
+      "This time let's assume the user has pressed the 'Escape' key, and so the condition evaluates to <span class='booleanTrue'>true</span>",
+      "The counter increments from lines 10 to 11 to begin executing the body of the 'if' statement"
+    ]
+  },
+  {
+    src: breakStatementSlide08.src,
+    altText: "The break statement instructs the CPU to terminate the while loop by jumping to the first line of code outside of the while loop. The program then ends.",
+    tipStart: 78,
+    tips: [
+      "The body of the 'if' statement is executed, which in this case contains a single <code>break</code> statement",
+      "The <code>break</code> statement instructs the CPU to <strong>terminate</strong> the <strong>while loop</strong> by jumping to the first line outside of the while loop",
+      "The counter increments from lines 11 to 12 then 13, ending the program"
+    ]
+  }
+];
 
 ### Infinite loops
 
@@ -96,7 +202,95 @@ WriteLine("\"Bring us a Shrubbery!\"");
 
 The following images show how this runs.
 
-**TODO add slider here**
+<MySwiper client:only height="" images={sliderImagesInfiniteLoop}></MySwiper>
+
+
+export const sliderImagesInfiniteLoop = [
+  {
+    src: infiniteLoopSlide01.src,
+    altText: "Lines 1-6 print some text to the terminal",
+    tipStart: 1,
+    tips: [
+      "Lines 1-6 print some text to the terminal",
+      "The program counter is increased from line 6 to line 7"
+    ]
+  },
+  {
+    src: infiniteLoopSlide02.src,
+    altText: "The condition in the while loop always evaluates to true and moves the program counter into the body of the loop",
+    tipStart: 2,
+    tips: [
+      "The while loop on line 7 contains the boolean <span class='booleanTrue'>true</span> as the condition, meaning it will always proceed into the body of the loop",
+      "The program counter moves from lines 8 to 9 and 10"
+    ]
+  },
+  {
+    src: infiniteLoopSlide03.src,
+    altText: "Lines 9 and 10 write a text prompt to the terminal",
+    tipStart: 3,
+    tips: [
+      "Lines 9 and 10 write a text prompt to the terminal",
+      "The program counter moves to line 11"
+    ]
+  },
+  {
+    src: infiniteLoopSlide04.src,
+    altText: "The condition in the 'if' statement reads in user input ('n'), and compares it to the literal string 'y'. It evaluates to 'false' and moves to the next iteration of the while loop.",
+    tipStart: 4,
+    tips: [
+      "The condition in the 'if' statement reads in user input, and compares it to the literal string 'y'",
+      "Let's assume the user enters 'n' so that the condition evaluates <span class='booleanFalse'>false</span>",
+      "The program counter moves to the next iteration of the while loop (from lines 12 -> 14 -> 7)"
+    ]
+  },
+  {
+    src: infiniteLoopSlide05.src,
+    altText: "The condition in the while loop always evaluates to true and moves the program counter into the body of the loop",
+    tipStart: 5,
+    tips: [
+      "The condition of the while statement evaluates <span class='booleanTrue'>true</span> again",
+      "The program counter moves from lines 8 to 9 and 10"
+    ]
+  },
+  {
+    src: infiniteLoopSlide06.src,
+    altText: "Lines 9 and 10 write further text prompts to the terminal",
+    tipStart: 6,
+    tips: [
+      "Lines 9 and 10 Write a further text prompts to the terminal",
+      "The program counter moves to line 11"
+    ]
+  },
+  {
+    src: infiniteLoopSlide07.src,
+    altText: "The condition in the 'if' statement reads in user input ('y'), which in this case evaluates to true, so the program counter moves to the first line in the body of the 'if' statement",
+    tipStart: 7,
+    tips: [
+      "The condition in the 'if' statement reads in user input (this time 'y')",
+      "Now the condition evaluates to <span class='booleanFalse'>true</span> meaning the body of the 'if' statement will be run",
+      "The program counter moves to lines 12 and 13"
+    ]
+  },
+  {
+    src: infiniteLoopSlide08.src,
+    altText: "The break statement instructs the CPU to terminate the while loop by jumping to the first line of code outside of the while loop",
+    tipStart: 8,
+    tips: [
+      "The body of the 'if' statement is executed, which in this case contains a single <code>break</code> statement",
+      "The <code>break</code> statement instructs the CPU to <strong>terminate</strong> the <strong>while loop</strong> by jumping to the first line outside of the while loop",
+      "The program counter skips from lines 14 and 15 to line 16"
+    ]
+  },
+  {
+    src: infiniteLoopSlide09.src,
+    altText: "Line 16 writes some text to the terminal. The program counter increments, and the program ends.",
+    tipStart: 9,
+    tips: [
+      "Line 16 writes some text to the terminal",
+      "The program counter increments, and the program ends."
+    ]
+  }
+];
 
 :::caution
 
