--- a/src/content/docs/book/part-2-organised-code/2-organising-code/2-put-together/02-00-designing-guess-that-number.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-organising-code/2-put-together/02-00-designing-guess-that-number.mdx
@@ -1,8 +1,12 @@
 ---
-title: Designing Guess that Number
+title: Guess that Number
 ---
 
-[Table x.y](#TableGuessThatNumberDescription) contains a description of the next program we are going to design. This program plays a small guessing game called *Guess that Number*. In this game the computer will think of a target number between 1 and 100. The user then has 7 guesses to determine the target number's value. At each guess the computer outputs a message to indicate if the target number is greater than, less than, or equal to the user's guess.
+As a second example, let's build a small guess that number program from the ground up. Now that you have functions and procedures, we can start by breaking the problem down before we think about the individual logic with each function and procedure.
+
+## Problem description
+
+[Table x.y](#TableGuessThatNumberDescription) contains a description of the next program we are going to design. This program plays a small guessing game called *Guess that Number*. In this game the computer will *think* of a target number between 1 and 100. The user then has 7 guesses to determine the target number's value. At each guess the computer outputs a message to indicate if the target number is greater than, less than, or equal to the user's guess.
 
 <br/>
 <a id="TableGuessThatNumberDescription"></a>
@@ -16,15 +20,10 @@ title: Designing Guess that Number
 
 As before, the process to design and implement this program will follow a number of steps:
 
-1.  Understand the problem, and get some ideas on the tasks that need to
-    be performed.
-2.  Choose the artefacts we will create and use
-3.  Design the control flow for the procedural<sup>[1](#FootnoteControlFlowElements)</sup> artefacts
-4.  Map these artefacts to code
-5.  Compile and run the program
+1. Understand the problem, and get some ideas on the tasks that need to be performed.
+1. Choose the building blocks we will create and use.
+1. Design the control flow for each function and procedure.
+1. Map this logic to code
+1. Compile and run the program
 
-The new step in this process will involve designing the flow of the instructions within the program, and the Functions and Procedures that need to be created. Previously each artefact had a sequential flow of
-instructions, the introduction of the control flow statements has made it possible to add branches and loops to this sequence. The order of these actions needs to be considered for each sequence of instructions in your code.
-
-<hr class="footnote"/>
-<div id="FootnoteControlFlowElements" class="footnote"><sup>1</sup>The program, and any Functions and Procedures</div>
+The new step in this process will involve designing the flow of the instructions within the program, and the functions and procedures that need to be created.
