--- a/src/content/docs/book/part-2-organised-code/2-organising-code/2-put-together/05-writing-the-code.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-organising-code/2-put-together/05-writing-the-code.mdx
@@ -1,19 +1,30 @@
 ---
 title: Writing the Code
+sidebar:
+    label: " - Writing the Code"
 ---
 
-## Writing the code for Guess that Number
+Flowcharts and pseudocode communicate the same ideas. They describe the actions that need to be performed within your code. The details captured here should give you everything you need to write the code.
 
-**[Needs to be written from scratch]**
-
-Flowcharts and Pseudocode communicate the same ideas. They describe the actions that need to be performed within your code. The following section contains a description of the syntax needed to code these control flow statements in the C# programming language.
+When in doubt, you can look back at the language syntax details and use those to help you write the necessary code. The thought process is what is important. If you can think about functions and procedure, you can then code these in many languages. All you need to learn is the new text to type - the thinking will be the same.
 
 :::note
+
 Remember the basic process for reading Syntax Diagrams is to:
-1. Find the page with the Syntax rule you are interested in knowing about
-2. Have a quick look at the Syntax Diagram and the rules it contains. Read each rule, and get a basic feel for how it is going to come together for your program
-3. Read the example to see one way of using the Rule. The Syntax Diagram can be sued to create any number of variations of the rule, the example gives you at least one way these rules can be coded.
+
+1. Find the page with the syntax rule you are interested in knowing about
+2. Have a quick look at the syntax diagram and the rules it contains. Read each rule, and get a basic feel for how it is going to come together for your program
+3. Read the example to see one way of using the rule. The syntax diagram can be sued to create any number of variations of the rule, the example gives you at least one way these rules can be coded.
 4. Return to the diagram and make sure you can match each part of the example back to the rule that created it.
 5. Look up any related rules that are not explained on this rule's page
 
 :::
+
+Have a go at coding this up yourself. Try adding documentation comments to each function and procedure to help explain its purpose. Try to build it a few pieces at a time. One approach could be to implement it using:
+
+- Get a basic main working, allowing the user to repeat until they choose to quit.
+- Start a basic play game, getting and outputting the random value.
+- Write up perform guess, and build its use into play game
+- Add the code to track the number of guesses
+
+At each stage you want to write the code, compile and run the program, and test to make sure that things are working as you expected.
