Progress edit of part 0 chap 2.

--- a/src/content/docs/book/part-0-getting-started/2-computer-use/1-concepts/02-shell.mdx
+++ b/src/content/docs/book/part-0-getting-started/2-computer-use/1-concepts/02-shell.mdx
@@ -22,13 +22,12 @@ You can use the shell to perform operations like copying and deleting files, sta
 
 There are several shell programs you can choose from, each of which has its advantages and disadvantages. The shell we are going to use for this journey will be **Z shell**, which is built into most modern Unix operating systems.
 
-:::tip
+:::tip[Charlotte's tip]
 Understanding the difference between the terminal and the shell can be challenging, especially as many people refer to them as the same thing.
 
 The quick summary is that the **terminal** allows you to input commands and view output.
-The **shell** has the actual logic to interpret and execute your commands.
+The **shell** has the actual *logic* to interpret and execute your commands.
 :::
-{/* TODO: Charlotte's tip? This is something I found confusing! Might be able to think of a good analogy to explain the difference too... */}
 
 ### Accessing the Shell
 
