start struct data put together and wrap up

--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-concepts/04-expressions-with-arrays.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-concepts/04-expressions-with-arrays.mdx
@@ -24,3 +24,5 @@ import imgArrayReadValueExpression from './images/mmv-array-read-value-expressio
 - Accessing a union value from an array is similar to accessing a struct value. In [Figure x.y](#FigureUnionExpression) you can access the array in its entirety using `data`, you can access the first `my_numbwer` value using `data[0]`, and you can access its text value using `data[0].txtVal`
 
 - The `kinds` variable is an array of `Data Kind` values. The expression `kinds` is an array of `Data Kind` values and can be used anywhere the array would be accepted. `kinds[0]` is a `Data Kind` value and can be used anywhere a `Data Kind` value can be used.
+
+**TODO: add images from old struct chapter**
