--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-concepts/00-array.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-concepts/00-array.mdx
@@ -15,8 +15,10 @@ import imgArray from './images/mmv-array.png';
 
 - An array is a kind of variable that you can create in your code.
 - Each array has a number of elements.
-- Each element stores a value of the same type as other elements in the array.
-- The elements of an array are accessed via an index. The first element has the index **0**, the second has the index **1**, etc.
+- Each element stores a value.
+- The type of each element is the same as the other elements in the array.
+- The elements of an array are accessed via an index.
+- The first element has the index **0**, the second has the index **1**, etc.
 - Individual elements of an array are much like a standard variable.
 - You can store a value in an element of an array using an [assignment statement](../03-assignment-statement-with-array).
 - You can use the value from an element of an array in an [expression](../04-expressions-with-arrays).
@@ -32,16 +34,35 @@ You need to pair arrays with a loop to repeat actions you want performed to each
 
 One challenge we currently have is that our arrays will have a **fixed size**. We can work around this by having a maximum number of values that we want to allow within the array, and then have a *current number* of elements that we increase and decrease as we add or remove elements.
 
+## Arrays in C/C++
+
+:::tip[Syntax]
+
+C allows you to declare variables that are arrays. This is done using square brackets (`[...]`), inside which you can indicate the number of elements in the array (*n*). Indexes will then be *0* to *n-1*. For example, `int arr[10];` contains ten elements, accessed by indexes 0 to 9.
+
+![C/C++ array declaration syntax](./images/array-decl.png)
+
+:::
+
+You can initialise an array when it is declared using a list of values in braces (`{...}`). This can only be done to initialise arrays in the variable declaration, and is not valid elsewhere.
+
+The size of the array must be able to be determined at compile time. If you initialise the array, you can leave the number of elements out of the array declaration (in the square brackets) as the compiler can work out the size from the number of elements you provide.
+
+:::caution
+
+Arrays in C/C++ do **not** store anything to remember their length, you must keep track of this yourself. While we work with fixed size arrays, we can use constants to help us remember how many elements are in the array.
+
+:::
+
 ## Arrays in Memory
 
-Arrays store multiple values, with an index that provides access to the individual elements within the array. Conceptually this can be viewed as a **Variable** that contains multiple slots (the elements) into which the values are stored.
+Arrays store multiple values, with an index that provides access to the individual elements within the array. Conceptually this can be viewed as a [variable](../../../../part-1-instructions/1-sequence-and-data/1-concepts/07-variable) that contains multiple slots (the elements) into which the values are stored.
 
-Many languages have **0** as the index of the first element. This reflects how the values are actually stored in memory. [Figure x.y](#FigureArrayContiguousMemory) shows how an array (named `arr` in this Figure) is stored in memory. The array is a **contiguous** area in memory, with the elements being next to each other. You can think of the array as starting at the first element, so you need to skip *0* elements to access the first element. The second element is accessed by skipping *1* element, so it has index *1*. The third element is accessed by skipping *2* elements, so it has the index *2*, etc.
+Many languages have **0** as the index of the first element. This reflects how the values are actually stored in memory. [Figure x.y](#FigureArrayContiguousMemory) shows how an array (named `arr` in this Figure) is stored in memory. The array is a **contiguous** area in memory, with the elements next to each other. You can think of the array as starting at the first element, so you need to skip *0* elements to access the first element. The second element is accessed by skipping *1* element, so it has index *1*. The third element is accessed by skipping *2* elements, so it has the index *2*, etc.
 
-The size of each of the elements of the array can then be used to quickly locate each element, given its index. If you have an array of `Integer` values then these are each 32 bits (4 bytes), so the element at index 3 is 3 × 32𝑏𝑖𝑡𝑠 (96 bits) past the start of the array.
+The size of each of the elements of the array can then be used to quickly locate it, given its index. If you have an array of `integer` values, then these are each 32 bits (4 bytes), so the element at index 3 is 3 × 32𝑏𝑖𝑡𝑠 (96 bits) past the start of the array.
 
-The great thing is that you do not need to think about these details, but knowing this should you remember that the first<sup>[1](#FootnoteArrayFirstElementIndex)</sup> element of an array is at index 0.
-
+The great thing is that you do not need to think about these details, but knowing this should help you remember that the first element of an array is at index 0.
 
 <br/>
 import imgArrayContiguousMemory from './images/mmv-array-contiguous-memory.png';
@@ -50,8 +71,8 @@ import imgArrayContiguousMemory from './images/mmv-array-contiguous-memory.png';
 <img src={imgArrayContiguousMemory.src} alt="Arrays occupy a contiguous area of memory, with elements next to each other in memory" width="100%" />
 <div class="caption"><span class="caption-figure-nbr">Figure x.y: </span>Arrays occupy a contiguous area of memory, with elements next to each other in memory</div><br/>
 
-
 :::note
+
 - Arrays are allocated a contiguous area of memory, with the elements next to each other.
 - The array index is used to determine how many elements (values) are skipped to access the element you require.
 - The index of the first element of an array is **0**.
@@ -59,7 +80,29 @@ import imgArrayContiguousMemory from './images/mmv-array-contiguous-memory.png';
 
 :::
 
+## Example
 
+The following example demonstrates the declaration of three arrays: `data`, `my_data`, and `other`. Each has five elements. The elements for `data` and `other` are initialised when the array is created, while values for `my_data` are provided in the for loop.
 
-<hr class="footnote"/>
-<div id="FootnoteArrayFirstElementIndex" class="footnote"><sup>1</sup>Some languages allow you to start at other values, but many use 0 based arrays which map more closely to how the data is stored in memory.</div>
+```cpp
+/* Program: test-array.c */
+#include <stdio.h>
+
+int main()
+{
+  int data[5] = {0, -1, 2, -3, 4};
+  double my_data[5];
+  float other[] = {1.2f, 2.5f, 0, -1, 6};
+  int i;
+
+  for (i = 0; i < 5; i++)
+  {
+    printf("Enter my data[%d]: ", i);
+    scanf("%lf", &my_data[i]);
+
+    printf("data[%d]: %d\n", i, data[i]);
+    printf("other[%d]: %f\n", i, other[i]);
+    printf("my_data[%d]: %lf\n", i, my_data[i]);
+  }
+  return 0;
+}```
